Fix block elements not being visible when spoiled or able to be spoilered again once spoiled. Fixes #590

--- a/Awful.apk/src/main/assets/css/classic.css
+++ b/Awful.apk/src/main/assets/css/classic.css
@@ -145,6 +145,11 @@ section.postcontent .bbc-spoiler * {
 visibility: hidden;
 }
 
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-block,
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-list{
+display: inline-block;
+}
+
 section.postcontent .bbc-spoiler.spoiled {
 background: transparent;
 }
