--- a/Awful.apk/src/main/assets/css/default.css
+++ b/Awful.apk/src/main/assets/css/default.css
@@ -153,6 +153,11 @@ section.postcontent .bbc-spoiler * {
 visibility: hidden;
 }
 
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-block,
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-list{
+display: inline-block;
+}
+
 section.postcontent .bbc-spoiler.spoiled {
 background: transparent;
 }
