--- a/Awful.apk/src/main/assets/css/oled.css
+++ b/Awful.apk/src/main/assets/css/oled.css
@@ -131,6 +131,11 @@ section.postcontent .bbc-spoiler * {
 visibility: hidden;
 }
 
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-block,
+section.postcontent .bbc-spoiler:not(.spoiled) .bbc-list{
+display: inline-block;
+}
+
 section.postcontent .bbc-spoiler.spoiled {
 background-color: transparent;
 color: #e7e7e7;
